Continued writing html code structure for site

--- a/index.html
+++ b/index.html
@@ -1,29 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content =" Apollo Miller Fullstack Developer Portfolio">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content=" Apollo Miller Fullstack Developer Portfolio" />
     <title>Apollo Miller | Portfolio</title>
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
-    
-    <link rel ="stylesheet" href="css/normalize.css">
-    <link rel ="stylesheet" href ="css/style.css">
-    <script src="https://kit.fontawesome.com/3bee2e0b4c.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/3bee2e0b4c.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
       rel="stylesheet"
     />
-</head>
-<body>
-    <header></header>
-        <main>
-            <section>About</section>
-            <section>Skills</section>
-            <section>Projects</section>
-        </main>
-        <footer>Connect</footer>  
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Hi, I'm Apollinair "Apollo" Miller</h1>
+      <p>Fullstack Developer & Engineer</p>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <img src="D:\happy\Pictures\IMG_5484-EDIT.jpg" alt="Apollo Miller profile pic">
+        <p>
+          I'm a detail-oriented fullstack developer passionate about creating
+          seamless web experiences. With expertise in both front-end and
+          back-end development, I deliver tailored solutions that align with
+          business goals. My strong communication and problem-solving skills
+          ensure efficient project execution. When I’m not learning a new
+          technology or coding, I’m spending time with family, pets and brushing
+          up on Botany.
+        </p>FUN FACT: I eat salads for breakfast</p>
+      </section>
+
+      <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>Skill 1</li>
+          <li>Skill 2</li>
+          <li>Skill 3</li>
+        </ul>
+      </section>
+
+      <section id="projects">
+        <h2>Projects</h2>
+
+        <p>Add a brief description and links to your projects (optional).</p>
+      </section>
+
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>
+          Provide your contact information (email, social media links etc.).
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 Apollo Miller</p>
+    </footer>
+  </body>
 </html>
