--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
       <section id="about">
         <h2>About Me</h2>
-        <img src="D:\happy\Pictures\IMG_5484-EDIT.jpg" alt="Apollo Miller profile pic">
+        <img src="https://i.postimg.cc/XJgJ3GXt/IMG-5484-EDIT.jpg" alt="Apollo Miller profile pic">
         <p>
           I'm a detail-oriented fullstack developer passionate about creating
           seamless web experiences. With expertise in both front-end and
