Continued coding up portfolio site

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content=" Apollo Miller Fullstack Developer Portfolio" />
+    <meta charset="UTF-8">
     <title>Apollo Miller | Portfolio</title>
-    <link rel="manifest" href="site.webmanifest" />
-    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/star-favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content=" Apollo Miller Fullstack Developer Portfolio">
+   
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
 
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <script
       src="https://kit.fontawesome.com/3bee2e0b4c.js"
       crossorigin="anonymous"
@@ -22,49 +24,129 @@
   </head>
   <body>
     <header>
-      <h1>Hi, I'm Apollinair "Apollo" Miller</h1>
-      <p>Fullstack Developer & Engineer</p>
+      <div class="content-wrapper">
+        <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li><a href="#projects">PROJECTS</a></li>
+            <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#about">ABOUT ME</a></li>
+            <li><a href="#contact">CONTACT ME</a></li>
+          </ul>
+        </nav>
+        <div class="intro">
+          <h1>Hi, I'm Apollinair "Apollo" Miller</h1>
+          <h2>I'm a full stack developer who loves technology, people, pets and plants.</h2>
+        </div>
+      </div>
     </header>
-
-    <nav>
-      <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-
     <main>
-      <section id="about">
-        <h2>About Me</h2>
-        <img src="https://i.postimg.cc/XJgJ3GXt/IMG-5484-EDIT.jpg" alt="Apollo Miller profile pic">
-        <p>
-          I'm a detail-oriented fullstack developer passionate about creating
-          seamless web experiences. With expertise in both front-end and
-          back-end development, I deliver tailored solutions that align with
-          business goals. My strong communication and problem-solving skills
-          ensure efficient project execution. When I’m not learning a new
-          technology or coding, I’m spending time with family, pets and brushing
-          up on Botany.
-        </p>FUN FACT: I eat salads for breakfast</p>
-      </section>
-
-      <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-          <li>Skill 1</li>
-          <li>Skill 2</li>
-          <li>Skill 3</li>
-        </ul>
-      </section>
-
       <section id="projects">
-        <h2>Projects</h2>
-
+        <div class="content-wrapper">
+          <h2>Projects</h2>
+          <div class="projects-items">
+            <article>PROJECT 1</article>
+            <article>PROJECT 2</article>
+            <article>PROJECT 3</article>
+            <article>PROJECT 4</article>
+          </div>
+        </div>
         <p>Add a brief description and links to your projects (optional).</p>
       </section>
 
+        <aside>FUN FACT: I eat salads for breakfast!</aside>
+      </section>
+
+      <section id="skills">
+        <div>
+         <h2>Skills</h2>
+          <ul>
+            <li>
+              <div>
+                <i class="fa-brands fa-html5">::before
+                </i>
+                <label>HTML</label>
+              </div>
+            </li>
+            <li>
+              <div>
+                <i>
+                  <label>CSS</label>
+                </i>
+              </div>
+            </li>
+            <li>
+              <div>
+              <i>
+                <label>JavaScript</label>
+              </i>
+            </div>
+          </li>
+            <li>
+              <div>
+                <i>
+                  <label>React</label>
+                </i>
+              </div>
+            </li>
+            <li>
+              <div>
+                <i>
+                  <label>Git | Github</label>
+                </i>
+              </div>
+            </li>
+            <li>
+              <div>
+                <i>
+                  <label>API's</label>
+                </i>
+              </div>
+            </li>
+            <li>
+              <div>
+                <i>
+                  <label>Node.js</label>
+                </i>
+              </div>
+            </li>
+            <li>
+              <div>
+                <i>
+                  <label>Python</label>
+                </i>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="tools">
+        <h2>Tools</h2>
+        <ul>
+          <li>Tools 1</li>
+          <li>Tools 2</li>
+          <li>Tools 3</li>
+        </ul>
+      </section>
+
+      
+      <section id="about">
+        <h2>About Me</h2>
+        <img
+          src="/portfolio_24/IMG_5484-EDIT.jpg"
+          alt="Apollo Miller profile pic"
+        />
+        <p>
+          I'm a Apollo Miller. A detail-oriented fullstack developer that loves
+          creating seamless web experiences. After several years in operations
+          management, I was led to software development by a genuinly curious
+          mind. Having expertise in front-end and back-end development allows me
+          to deliver tailored solutions that align with client and business
+          goals. My strong communication and problem-solving skills ensure
+          efficient project execution. When I’m not learning a new technology or
+          coding, I’m spending time with family, pets and brushing up on Botany.
+        </p>
       <section id="contact">
         <h2>Contact</h2>
         <p>
