Began adding styling to HTML of site

--- a/index.html
+++ b/index.html
@@ -70,51 +70,60 @@
             </li>
             <li>
               <div>
-                <i>
-                  <label>CSS</label>
+                <i class="fa-brands fa-css3-alt">
+                  ::before
                 </i>
+                <label>CSS</label>
               </div>
             </li>
             <li>
               <div>
-              <i>
+              <i class="fa-brands fa-js">
+                ::before
                 <label>JavaScript</label>
               </i>
             </div>
           </li>
             <li>
               <div>
-                <i>
+                <i class="fa-brands fa-react">
+                  ::before
+                </i>
                   <label>React</label>
-                </i>
               </div>
             </li>
             <li>
               <div>
-                <i>
-                  <label>Git | Github</label>
+                <i class="fa-brands fa-github">
+                  ::before
                 </i>
+                <label>Git | Github</label>
               </div>
             </li>
             <li>
               <div>
-                <i>
+                <i class="fa-solid fa-arrows-left-right">
+                  ::before
+                </i>
                   <label>API's</label>
-                </i>
               </div>
             </li>
             <li>
               <div>
-                <i>
+                <i class=" fa-brands fa-node-js">
+                  ::before
+                </i>
                   <label>Node.js</label>
-                </i>
+                
               </div>
             </li>
             <li>
               <div>
-                <i>
-                  <label>Python</label>
+                <i class="fa-brands fa-python">
+                  ::before
                 </i>
+                  <label>Python</label>
+                
               </div>
             </li>
           </ul>
